# segstream-crud

./: .gitignore  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue  LogView.vue
segstream/: Dockerfile  manage.py  pyproject.toml  requirements.txt
segstream/apps/apilogs/: apps.py  serializers.py  urls.py  views.py
segstream/apps/apilogs/tests/: test_api.py
segstream/apps/myusers/: apps.py  serializers.py  urls.py  views.py
segstream/apps/myusers/tests/: test_api.py
segstream/apps/swagdoc/: apps.py  urls.py
segstream/segstream/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
webserver/: Dockerfile  nginx.conf
